# vscode.bzl

./: .gitignore  LICENSE  MODULE.bazel  README.md  aspect.bzl  vscode.bzl
example/: BUILD.bazel  MODULE.bazel
example/java/com/example/: BUILD.bazel  HelloWorld.java  Library.java
